--- a/datazilla/webapp/templates/metrics.summary.html
+++ b/datazilla/webapp/templates/metrics.summary.html
@@ -93,19 +93,23 @@
                 <span class="ui-icon ui-icon-help"></span>
             </a>
 
-            <div style="width:250px; position:absolute; left:170px; top:460px; opacity:0.6;" class="ui-widget ui-corner-all arrow_box">
-                <div style="margin-top:10px; margin-bottom:10px; margin-left:10px; margin-right:10px;">Tip: Mouse over grid to load a test suite table.  Click a cell to lock.</div>
-            </div>
+            <div id="su_grid_container">
 
-            <div id="su_grid" style="margin-top:80px;" class="su-light-text css-left">
-                <div id="su_boundary" style="width:430px;">
-                    <div class="su-column-headers"></div>
-                    <div id="su_grid_scroll_container" style="width:430px; height:175px; overflow-y:auto;" class="css-left">
-                        <div class="su-row-headers"></div>
-                        <div class="su-grid-values"></div>
+                <div style="width:250px; position:absolute; left:170px; top:460px; opacity:0.6;" class="ui-widget ui-corner-all arrow_box">
+                    <div style="margin-top:10px; margin-bottom:10px; margin-left:10px; margin-right:10px;">Tip: Mouse over grid to load a test suite table.  Click a cell to lock.</div>
+                </div>
+
+                <div id="su_grid" style="margin-top:80px;" class="su-light-text css-left">
+                    <div id="su_boundary" style="width:430px;">
+                        <div class="su-column-headers"></div>
+                        <div id="su_grid_scroll_container" style="width:430px; height:230px; overflow-y:auto;" class="css-left">
+                            <div class="su-row-headers"></div>
+                            <div class="su-grid-values"></div>
+                        </div>
                     </div>
                 </div>
             </div>
+
             <div id="su_table_container" style="width:42%; height:380px; margin-top:25px;" class="css-right">
                 <div class="su-large-text css-left"><span class="su-light-text2">Test Suite:</span><span id="su_test_suite" class="su-light-text"></span><span style="margin-left:15px;" class="su-light-text2">Platform:</span><span id="su_platform" class="su-light-text"></span></div>
                 <table id="su_test_pages" cellpadding="0" cellspacing="0" border="0" class="display"></table>
@@ -191,6 +195,8 @@
 
 {% else %}
 <script type="text/javascript" src="/static/js/metric_summary/metric-summary-min.js"></script>
+
+<!--[if lte IE 8]><script language="javascript" type="text/javascript" src="/static/js/plugins/flot-0.7/excanvas.min.js"></script><![endif]-->
 {% endif %}
 
 
