--- a/datazilla/webapp/templates/metrics.summary.html
+++ b/datazilla/webapp/templates/metrics.summary.html
@@ -56,7 +56,7 @@
             <div id="su_main_gauge_container" class="su-main-gauge">
                 <div id="su_gauge_1"></div>
                 <div class="su-reference-info" style="width:245px; display:none;">
-                    <div><span class="su-light-text2">Product:</span>
+                    <div id="su_revision_products_container"><span class="su-light-text2">Product:</span>
                         <select id="su_revision_products" size="1" class="css-right"></select>
                     </div>
                     <div style="margin-top:5px;"><span class="su-light-text2">Revision:</span>&nbsp;<span id="su_revision_tested" class="su-light-text css-right"></span></div>
