--- a/datazilla/webapp/templates/metrics.summary.html
+++ b/datazilla/webapp/templates/metrics.summary.html
@@ -24,13 +24,16 @@
 
 <div id="su_container">
    <!-- Help Modal -->
-   <div id="su_help_modal_dialog" title="Application Help" style="display:none;">
+   <div id="su_help_modal_dialog" title="Application Help" style="display:none; overflow:hidden;">
 
         <a href="https://github.com/mozilla/datazilla"><img style="position: absolute; top: 0; left: -15px; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_left_orange_ff7600.png" alt="Fork me on GitHub"></a>
 
-        <p style="margin-top:150px;">Help is on the way! No really it is... it just hasn't quite arrived yet.  In the meantime, if something doesn't seem to be working correctly, please file a bug. Thank you!</p>
+        <div style="position: absolute; top: 10px; left: 450px; display:inline;">
+            <p><b>Something not working right? Please</b> <a id="su_file_a_bug" target="_blank" href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Datazilla">File a Datazilla Bug</a></p>
+        </div>
 
-        <a id="su_file_a_bug" target="_blank" href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Datazilla">File a Datazilla Bug</a>
+        <iframe frameborder="0" src="/static/html/help/metrics_summary.html" style="overflow-y:auto; overflow-x:hidden; width:750px; height:590px; margin-top:75px;"></iframe>
+
    </div>
 
    <!-- Dashboard -->
@@ -85,7 +88,7 @@
 
    <div class="ui-helper-clearfix"></div>
 
-   <div style="height:400px;" class="ui-widget ui-widget-header ui-corner-all su-panel-base">
+   <div style="height:425px;" class="ui-widget ui-widget-header ui-corner-all su-panel-base">
         <div id="su_grid_spinner" style="height:400px;" class="su-spinner ui-widget"></div>
         <div id="su_test_suite_dashboard" style="display:none;">
 
@@ -145,7 +148,7 @@
             <div id="su_graph_detail_container_1" class="ui-widget css-left" style="width:135px; overflow-y:auto; height:380px; display:block; margin-left:10px;"></div>
             <div class="su-vertical-text">Mean (milliseconds)</div>
             <div id="su_trendline_plot" style="margin-left:30px; margin-bottom:20px; height:350px; width:600px;" class="css-left"></div>
-            <div style="width:235px; position:absolute; left:780px; top:890px; opacity:0.6;" class="ui-widget ui-corner-all arrow_box_up css-left">
+            <div style="width:235px; position:absolute; left:780px; top:915px; opacity:0.6;" class="ui-widget ui-corner-all arrow_box_up css-left">
                 <div style="margin:10px;">Tip: Select a row above to load a series. Mouse over points below to load data.</div>
             </div>
             <div style="overflow-y:auto; height: 380px; margin-left:3px; width:220px;" class="css-left">
