--- a/datazilla/webapp/templates/metrics.summary.html
+++ b/datazilla/webapp/templates/metrics.summary.html
@@ -32,7 +32,7 @@
             <p><b>Something not working right? Please</b> <a id="su_file_a_bug" target="_blank" href="https://bugzilla.mozilla.org/enter_bug.cgi?product=Datazilla">File a Datazilla Bug</a></p>
         </div>
 
-        <iframe frameborder="0" src="/static/html/help/metrics_summary.html" style="overflow-y:auto; overflow-x:hidden; width:750px; height:590px; margin-top:75px;"></iframe>
+        <iframe id="su_iframe" frameborder="0" src="/static/html/help/metrics_summary.html" style="overflow-y:auto; overflow-x:hidden; width:750px; height:590px; margin-top:75px;"></iframe>
 
    </div>
 
