fixed hover issue

--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -66,7 +66,7 @@
             <div id="app_perf_chart" style="width:905px; height:370px; margin-top:5px; margin-left:35px;"></div>
             <div id="app_perf_detail_container" class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container">
                 <div style="width:200px;" class="app-control-element app-control-small-element">Application:<span id="app_series_application" class="app-data"></span></div>
-                <div style="width:185px;" class="app-control-element app-control-small-element">Gaia Revision:<span id="app_series_revision" class="app-data"></span></div>
+                <div style="width:185px;" class="app-control-element app-control-small-element">Gaia Revision:<a id="app_series_revision" target="_blank" class="app-data"></a></div>
                 <div style="width:140px;" class="app-control-element app-control-small-element">Date:<span id="app_series_formatted_date_run" class="app-data"></span></div>
                 <div style="width:80px;" class="app-control-element app-control-small-element">Mean:<span id="app_series_avg" class="app-data"></span></div>
                 <div style="width:75px;" class="app-control-element app-control-small-element">Min:<span id="app_series_min" class="app-data"></span></div>
@@ -82,8 +82,8 @@
             <div style="width:120px;" class="app-control-element su-large-text">Test Replicates</div>
             <div style="width:185px;" class="app-control-element app-control-small-element">Application:<span id="app_replicate_application" class="app-data"></span></div>
             <div style="width:200px;" class="app-control-element app-control-small-element">Test:<span id="app_replicate_test" class="app-data"></span></div>
-            <div style="width:185px;" class="app-control-element app-control-small-element">Gaia Revision:<span id="app_replicate_revision" class="app-data"></span></div>
-            <div style="width:190px;" class="app-control-element app-control-small-element">Gecko Revision:<span id="app_replicate_gecko_revision" class="app-data"></span></div>
+            <div style="width:185px;" class="app-control-element app-control-small-element">Gaia Revision:<a id="app_replicate_revision" target="_blank" class="app-data"></a></div>
+            <div style="width:190px;" class="app-control-element app-control-small-element">Gecko Revision:<a id="app_replicate_gecko_revision" target="_blank" class="app-data"></a></div>
         </div>
     </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-graph-container-two">
