--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -48,7 +48,7 @@
    </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-control-container">
         <div style="display:inline;">
-            <div style="width:250px;" class="app-control-element su-large-text">Firefox OS Application Performace</div>
+            <div style="width:250px;" class="app-control-element su-large-text">Firefox OS Application Performance</div>
             <div style="width:350px;" class="app-control-element app-control-small-element">Test:<span id="app_test_name" class="app-data"></span></div>
             <div style="width:150px;" class="app-control-element">Time Range:
                 <select id="app_time_range">
