--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -57,6 +57,10 @@
                     <option value="90">90 Days</option>
                 </select>
             </div>
+            <div style="margin-left:30px; margin-right:30px;" class="app-control-element">Gaia Branch:
+                <select id="app_branch">
+                </select>
+            </div>
             </div>
     </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-graph-container">
@@ -98,7 +102,7 @@
                 <div class="app-control-element app-control-small-element">Std:<span id="app_replicate_std" class="app-data"></span></div>
             </div>
             <div class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container app-replicate-graph-detail" style="width:300px; top:70px; left:648px;">
-                <div style="width:120px;" class="app-control-element app-control-small-element">Replicate Number:<span id="app_replicate_x" class="app-data"></span></div>
+                <div style="width:120px;" class="app-control-element app-control-small-element">Replicate:<span id="app_replicate_x" class="app-data"></span></div>
                 <div style="width:150px;" class="app-control-element app-control-small-element">Run Time:<span id="app_replicate_y" class="app-data"></span></div>
             </div>
             <div id="app_replicate_build_data" class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container app-replicate-graph-detail" style="width:300px; height:245px; top:105px; left:648px;">
