--- a/datazilla/webapp/static/css/apps.css
+++ b/datazilla/webapp/static/css/apps.css
@@ -131,6 +131,44 @@ div.app-build-data{
     float:left;
 }
 div.app-spinner {
-  background: transparent url(/static/images/spinner.gif) no-repeat center center;
-  height:420px;
+    background: transparent url(/static/images/spinner.gif) no-repeat center center;
+    height:420px;
+}
+div.app-no-data-message {
+
+    width: 905px;
+    height: 370px;
+    margin-top: 170px;
+    margin-left: 425px;
+    font-size: 18px;
+    font-weight: bold;
+}
+.app-arrow-box {
+    position: relative;
+    background: #ffffff;
+    border: 2px solid #5CB2CB;
+}
+.app-arrow-box:after, .app-arrow-box:before {
+    bottom: 100%;
+    border: solid transparent;
+    content: " ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+}
+
+.app-arrow-box:after {
+    border-color: rgba(255, 255, 255, 0);
+    border-bottom-color: #ffffff;
+    border-width: 10px;
+    left: 50%;
+    margin-left: -10px;
+}
+.app-arrow-box:before {
+    border-color: rgba(92, 178, 203, 0);
+    border-bottom-color: #5CB2CB;
+    border-width: 13px;
+    left: 50%;
+    margin-left: -13px;
 }
