--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -44,29 +44,40 @@
    <div id="app_series" class="ui-widget ui-widget-header ui-corner-all app-list">
    </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-list-controls">
+        <input id="app_select_apps" type="checkbox" style="margin-top:5px; margin-left:5px; margin-right:5px; float:left;" checked>
         <div style="padding:5px;" class="su-large-text">Applications</div>
    </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-control-container">
         <div style="display:inline;">
-            <div style="width:300px;" class="app-control-element su-large-text">Firefox OS Application Performance</div>
-            <div style="margin-left:30px; margin-right:30px;" class="app-control-element app-control-small-element">Test:<span id="app_test_name" class="app-data"></span></div>
-            <div style="margin-left:30px; margin-right:30px;" class="app-control-element">Time Range:
+            <div style="width:280px;" class="app-control-element su-large-text">Firefox OS Application Performance</div>
+            <div style="margin-right:10px;" class="app-control-element app-control-small-element">Test:<span id="app_test_name" class="app-data"></span></div>
+            <div style="margin-left:10px; margin-right:20px;" class="app-control-element">Time Range:
                 <select id="app_time_range">
+                    <option value="7">7 Days</option>
                     <option value="30">30 Days</option>
                     <option value="60">60 Days</option>
                     <option value="90">90 Days</option>
                 </select>
             </div>
-            <div style="margin-left:30px; margin-right:30px;" class="app-control-element">Gaia Branch:
+            <div style="margin-left:10px; margin-right:10px;" class="app-control-element">Gaia Branch:
                 <select id="app_branch">
                 </select>
             </div>
+            <div style="margin-left:10px; margin-right:5px;" class="app-control-element">
+                <button id="app_permalink" title="Create a rather long descriptive link to this page">Get Link</button>
+
+                <div id="app_link" class="app-arrow-box" style="padding:5px; position:absolute; width:250px; height:80px; z-index:10; top:35px; right:1px; display:none;">
+                    <h4>Enter Cmd-C or Ctrl-C to copy link to clipboard</h4>
+                    <input type="text" size="46" readonly />
+                </div>
             </div>
+        </div>
     </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-graph-container">
         <div id="app_perf_wait" class="app-spinner"></div>
         <div id="app_perf_data_container" style="display:none;">
             <div style="position:absolute; left:-68px; top:10px;" class="su-vertical-text">Average Run Time (milliseconds)</div>
+            <div id="app_perf_no_chartdata" class="app-no-data-message" style="display:none;">No Data Found</div>
             <div id="app_perf_chart" style="width:905px; height:370px; margin-top:5px; margin-left:35px;"></div>
             <div id="app_perf_detail_container" class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container">
                 <div style="width:180px;" class="app-control-element app-control-small-element">Application:<span id="app_series_application" class="app-data"></span></div>
@@ -94,6 +105,7 @@
         <div id="app_replicate_wait" style="height:380px;" class="app-spinner"></div>
         <div id="app_replicate_data_container" style="display:none;">
             <div style="position:absolute; left:-45px; top:10px;" class="su-vertical-text">Run Time (milliseconds)</div>
+            <div id="app_rep_no_chartdata" class="app-no-data-message" style="margin-left:300px; display:none;">No Data Found</div>
             <div id="app_replicate_chart" style="width:605px; height:340px; margin-top:30px; margin-left:35px;"></div>
             <div class="ui-widget ui-widget-header ui-corner-all app-detail-graph-container app-replicate-graph-detail" style="width:300px; top:35px; left:648px;">
                 <div class="app-control-element app-control-small-element">Avg:<span id="app_replicate_avg" class="app-data"></span></div>
