fixed bug and layout issue

--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -44,7 +44,7 @@
    <div id="app_series" class="ui-widget ui-widget-header ui-corner-all app-list">
    </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-list-controls">
-        <input id="app_select_apps" type="checkbox" style="margin-top:5px; margin-left:5px; margin-right:5px; float:left;" checked>
+        <input id="app_select_apps" type="checkbox" style="margin-top:5px; margin-left:5px; margin-right:5px; float:left;" title="Select/Unselect all applications" checked>
         <div style="padding:5px;" class="su-large-text">Applications</div>
    </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-control-container">
@@ -63,12 +63,12 @@
                 <select id="app_branch">
                 </select>
             </div>
-            <div style="margin-left:10px; margin-right:5px;" class="app-control-element">
+            <div style="margin-left:20px; margin-right:5px;" class="app-control-element">
                 <button id="app_permalink" title="Create a rather long descriptive link to this page">Get Link</button>
 
-                <div id="app_link" class="app-arrow-box" style="padding:5px; position:absolute; width:250px; height:80px; z-index:10; top:35px; right:1px; display:none;">
+                <div id="app_link" class="app-arrow-box" style="padding:5px; position:absolute; width:250px; height:80px; z-index:10; top:35px; right:2px; display:none;">
                     <h4>Enter Cmd-C or Ctrl-C to copy link to clipboard</h4>
-                    <input type="text" size="46" readonly />
+                    <input type="text" size="44" readonly />
                 </div>
             </div>
         </div>
