added url based history and HTML5 labels to b2g UI, removed pushlog panel from talos UI

--- a/datazilla/webapp/templates/metrics.summary.html
+++ b/datazilla/webapp/templates/metrics.summary.html
@@ -123,7 +123,7 @@
         </div>
     </div> <!-- End Grid Panel -->
 
-   <div style="height:500px;" class="ui-widget ui-widget-header ui-corner-all su-panel-base">
+   <div style="height:500px; display:none;" class="ui-widget ui-widget-header ui-corner-all su-panel-base">
 
         <div id="su_pushlog_spinner" style="height:400px;" class="su-spinner ui-widget"></div>
 
