--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -23,16 +23,16 @@
 </div>
 
 <div id="su_legend" class="ui-state-highlight ui-corner-all su-data-series-panel" style="display:none;">
-   <div style="margin-bottom:3px;">
+   <label>
       <input type="checkbox" title="toggle" style="margin-left:2px; margin-right:5px; float:left;" />
       <div name="su_dataset_title" class="su-wordwrap css-left" style="width:100px; margin-top:4px;"></div>
-   </div>
+   </label>
 </div>
 <div id="su_test_legend" class="ui-state-highlight ui-corner-all su-data-series-panel" style="display:none;">
-   <div style="margin-bottom:3px;">
+   <label>
       <input type="radio" name="test_type" style="margin-left:2px; margin-right:5px; float:left;" />
       <div name="su_dataset_title" class="su-wordwrap css-left" style="width:100px; margin-top:4px;"></div>
-   </div>
+   </label>
 </div>
 
 <div id="app_container" class="ui-widget ui-widget-header ui-corner-top app-container">
@@ -44,8 +44,10 @@
    <div id="app_series" class="ui-widget ui-widget-header ui-corner-all app-list">
    </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-list-controls">
-        <input id="app_select_apps" type="checkbox" style="margin-top:5px; margin-left:5px; margin-right:5px; float:left;" title="Select/Unselect all applications" checked>
-        <div style="padding:5px;" class="su-large-text">Applications</div>
+        <label>
+            <input id="app_select_apps" type="checkbox" style="margin-top:5px; margin-left:5px; margin-right:5px; float:left;" title="Select/Unselect all applications" checked>
+            <div style="padding:5px;" class="su-large-text">Applications</div>
+        </label>
    </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-control-container">
         <div style="display:inline;">
@@ -62,14 +64,6 @@
             <div style="margin-left:10px; margin-right:10px;" class="app-control-element">Gaia Branch:
                 <select id="app_branch">
                 </select>
-            </div>
-            <div style="margin-left:20px; margin-right:5px;" class="app-control-element">
-                <button id="app_permalink" title="Create a rather long descriptive link to this page">Get Link</button>
-
-                <div id="app_link" class="app-arrow-box" style="padding:5px; position:absolute; width:250px; height:80px; z-index:10; top:35px; right:2px; display:none;">
-                    <h4>Enter Cmd-C or Ctrl-C to copy link to clipboard</h4>
-                    <input type="text" size="44" readonly />
-                </div>
             </div>
         </div>
     </div>
@@ -126,6 +120,7 @@
 {% if DEBUG %}
 <script type="text/javascript" src="/static/js/plugins/jquery-1.6.3.min.js"></script>
 <script type="text/javascript" src="/static/js/plugins/jquery-ui-1.8.13.custom.min.js"></script>
+<script type="text/javascript" src="/static/js/plugins/jquery.history.js"></script>
 <script type="text/javascript" src="/static/js/plugins/jquery.url.js"></script>
 <script type="text/javascript" src="/static/js/plugins/flot-0.7/jquery.flot.min.js"></script>
 <script type="text/javascript" src="/static/js/plugins/flot-0.7/jquery.flot.selection.min.js"></script>
