fixed pushlogs unique key

--- a/datazilla/model/sql/template_schema/schema_hgmozilla.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_hgmozilla.sql.tmpl
@@ -99,7 +99,7 @@ CREATE TABLE `pushlogs` (
   `user` varchar(100) COLLATE utf8_bin DEFAULT NULL,
   `branch_id` int(11) DEFAULT NULL,
   PRIMARY KEY (`id`),
-  UNIQUE KEY `uq_push` (`push_id`),
+  UNIQUE KEY `uq_push` (`push_id`, `branch_id`),
   KEY `branch` (`branch_id`),
   CONSTRAINT `branch` FOREIGN KEY (`branch_id`) REFERENCES `branches` (`id`) ON DELETE NO ACTION ON UPDATE NO ACTION
 ) ENGINE={engine} DEFAULT CHARSET=utf8 COLLATE=utf8_bin;
