added device select menu

--- a/datazilla/webapp/templates/apps.summary.html
+++ b/datazilla/webapp/templates/apps.summary.html
@@ -66,6 +66,10 @@
                 <select id="app_branch">
                 </select>
             </div>
+            <div style="margin-left:10px; margin-right:10px;" class="app-control-element">Device:
+                <select id="app_device">
+                </select>
+            </div>
         </div>
     </div>
    <div class="ui-widget ui-widget-header ui-corner-all app-graph-container">
