added SelectionState class for state management

--- a/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
+++ b/datazilla/model/sql/template_schema/schema_perftest.sql.tmpl
@@ -706,6 +706,8 @@ CREATE TABLE `test_data_all_dimensions` (
   KEY `branch_version_key` (`branch_version`),
   KEY `processor_key` (`processor`),
   KEY `machine_name_key` (`machine_name`),
+  KEY `operating_system_name_key` (`operating_system_name`),
+  KEY `operating_system_version_key` (`operating_system_version`),
   KEY `test_name_key` (`test_name`),
   KEY `page_url_key` (`page_url`),
   KEY `status_key` (`status`),
