--- a/datazilla/webapp/templates/homepage.html
+++ b/datazilla/webapp/templates/homepage.html
@@ -53,7 +53,7 @@
 
         <div class="su-large-text" style="margin-left:380px; margin-top:50px;">Adjust time range to retrieve corresponding data.</div>
 
-        <div id="slider" style="width:85%; margin-top:50px; margin-left:100px;"></div>
+        <div id="slider" style="width:75%; margin-top:50px; margin-left:100px;"></div>
 
     <div id="hp_tabs" style="margin-top:100px;">
         <ul>
@@ -124,6 +124,7 @@
 
 <!-- Homepage classes -->
 <script type="text/javascript" src="/static/js/data_views/Bases.js"></script>
+<script type="text/javascript" src="/static/js/homepage/SelectionState.js"></script>
 <script type="text/javascript" src="/static/js/homepage/HomePage.js"></script>
 <script type="text/javascript" src="/static/js/homepage/SliderComponent.js"></script>
 <script type="text/javascript" src="/static/js/homepage/NavComponent.js"></script>
